Add more details to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "react-mini-charts",
   "version": "0.1.0",
+  "description": "A collection of tiny charts for React projects.",
   "private": true,
+  "homepage": "https://github.com/herrherrmann/react-mini-charts#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/herrherrmann/react-mini-charts.git"
+  },
+  "keywords": [
+    "react",
+    "charts",
+    "dataviz",
+    "typescript"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
