Build and release improvements

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-mini-charts",
   "version": "0.1.0",
   "description": "A collection of tiny charts for React projects.",
-  "private": true,
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
@@ -38,12 +37,12 @@
     "react-dom": "^18.2.0"
   },
   "scripts": {
+    "format": "prettier --write .",
     "start": "react-scripts start",
     "build": "rm -rf /dist && npm run build:esm && npm run build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module CommonJS --outDir dist/cjs",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
