--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,22 @@
 {
-  "compilerOptions": {
-    "target": "es6",
-    "lib": ["ES5", "ES2015", "ES2016", "DOM", "ESNext"],
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "declaration": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noUnusedLocals": true,
-    "jsx": "react-jsx",
-    "outDir": "dist/esm",
-    "sourceMap": true,
-  },
-  "include": ["src/**/*.ts", "src/**/*.tsx"]
+	"compilerOptions": {
+		"target": "es6",
+		"lib": ["ES5", "ES2015", "ES2016", "DOM", "ESNext"],
+		"skipLibCheck": true,
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"declaration": true,
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"noFallthroughCasesInSwitch": true,
+		"module": "esnext",
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noUnusedLocals": true,
+		"jsx": "react-jsx",
+		"outDir": "dist/esm",
+		"sourceMap": true
+	},
+	"include": ["src"]
 }
