Properly build project via rollup, to include CSS modules

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "react-mini-charts",
   "version": "0.0.1",
   "description": "A collection of tiny charts for React projects.",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "files": [
     "dist"
   ],
@@ -38,13 +38,11 @@
   },
   "scripts": {
     "format": "prettier --write .",
-    "start": "react-scripts start",
-    "build": "rm -rf /dist && npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module CommonJS --outDir dist/cjs",
+    "build": "rm -rf ./dist && rollup -c --bundleConfigAsCjs",
     "test": "react-scripts test",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "prepublishOnly": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -54,7 +52,8 @@
     "overrides": [
       {
         "files": [
-          "**/*.stories.*"
+          "**/*.stories.*",
+          "rollup.config.js"
         ],
         "rules": {
           "import/no-anonymous-default-export": "off"
@@ -75,6 +74,8 @@
     ]
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
@@ -86,7 +87,12 @@
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "node-sass": "^8.0.0",
     "prop-types": "^15.8.1",
+    "rollup": "^3.15.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
     "webpack": "^5.75.0"
   }
 }
