--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"declaration": true,
+		"declarationDir": "dist",
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
 		"noFallthroughCasesInSwitch": true,
