Add MIT license to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-mini-charts",
-  "version": "0.0.4",
   "description": "A collection of tiny chart components for React projects.",
+  "version": "0.0.4",
+  "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "files": [
