--- a/package.json
+++ b/package.json
@@ -23,9 +23,6 @@
     "typescript"
   ],
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
@@ -44,14 +41,15 @@
     "@storybook/node-logger": "^6.5.16",
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
     "chromatic": "^6.17.0",
+    "jest": "^29.4.3",
     "rollup": "^3.15.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "storybook-addon-jsx": "^7.3.14",
+    "ts-jest": "^29.0.5",
     "webpack": "^5.75.0"
   },
   "peerDependencies": {
@@ -61,7 +59,7 @@
   "scripts": {
     "format": "prettier --write .",
     "build": "rm -rf ./dist && rollup -c --bundleConfigAsCjs",
-    "test": "react-scripts test",
+    "test": "jest",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "prepublishOnly": "npm run build"
