--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "typescript"
   ],
   "dependencies": {
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.0",
-    "@types/react": "^18.0.28",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.2",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
@@ -42,15 +42,16 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.16",
     "babel-plugin-named-exports-order": "^0.0.2",
-    "chromatic": "^6.17.0",
-    "jest": "^29.4.3",
-    "rollup": "^3.17.2",
+    "chromatic": "^6.17.3",
+    "jest": "^29.5.0",
+    "postcss": "^8.4.21",
+    "rollup": "^3.20.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "storybook-addon-jsx": "^7.3.14",
-    "ts-jest": "^29.0.5",
-    "webpack": "^5.75.0"
+    "ts-jest": "^29.1.0",
+    "webpack": "^5.77.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
